--- a/to_html.ipynb
+++ b/to_html.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"Resources/cities.csv\")\n",
+    "df = pd.read_csv(\"cities.csv\")\n",
     "df"
    ]
   },
