--- a/to_html.ipynb
+++ b/to_html.ipynb
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "txt_file = open(\"/UCIBootcamp/Web-Design-Challenge/data/data.html\", \"w\")\n",
+    "txt_file = open(\"data.html\", \"w\")\n",
     "txt_file.write(html)\n",
     "txt_file.close()"
    ]
